<resources>
    <string name="app_name">Muta7</string>
    <string name="action_settings">Settings</string>

    <string name="create_space_title">Create Space</string>
    <string name="space_name_text">Space Name</string>
    <string name="space_description">Description</string>
    <string name="space_mobile">Mobile</string>
    <string name="space_email">Email</string>
    <string name="space_website">Website</string>
    <string name="space_fb">Facebook</string>
    <string name="space_tw">Twitter</string>
    <string name="space_insta">Instagram</string>
    <string name="space_yt">Youtube</string>
    <string name="space_city">City</string>
    <string name="space_district">District</string>
    <string name="space_map">Map</string>
    <string name="space_address">Space Full Address</string>
    <string name="space_near_place">Nearby Place</string>
    <string name="go_to_map">Go to Map</string>
    <string name="room_name">Room Name</string>
    <string name="room_type">Room Type</string>
    <string name="room_cap">Room Capacity</string>
    <string name="add_room">Add Room +</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="general_details">General Details</string>
    <string name="contact_details">Official Contact Details</string>
    <string name="vacation">Vacation</string>
    <string-array name="week">
        <item>Sat</item>
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="custom">Customize</string>
    <string name="undo">Undo</string>

    <string name="remove_room">Remove</string>

    <string name="general_amnt">General Amenities</string>
    <string name="rooms_details">Rooms Details</string>
    <string-array name="rooms_types_array">
        <item>Meeting Room</item>
        <item>Hall</item>
        <item>Office</item>
    </string-array>


    <string-array name="alex">
        <item>AAA</item>
        <item>BBB</item>
        <item>CCC</item>
        <item>DDD</item>
    </string-array>
    <string-array name="cairo">
        <item>Dokki</item>
        <item>New Cairo</item>
        <item>Madient Nasr</item>
        <item>6 October</item>
    </string-array>
    <string-array name="empty">

    </string-array>
    <string-array name="cities">
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Al Mansoura</item>
        <item>Kalyobya</item>
    </string-array>
    <array name="general_amenities_icons">
        <item>@drawable/ac</item>
        <item>@drawable/wifi</item>
        <item>@drawable/kitchen</item>
        <item>@drawable/boiler</item>
        <item>@drawable/books</item>
        <item>@drawable/playstation</item>
        <item>@drawable/computer</item>

    </array>
    <string-array name="general_amenities_names">
        <item>Air Conditioner</item>
        <item>Wifi</item>
        <item>Kitchen</item>
        <item>Boiler</item>
        <item>Books</item>
        <item>Playstation</item>
        <item>Computers</item>>
    </string-array>

    <string-array name="room_amenities_names">
        <item>Air Conditioner</item>
        <item>Wifi</item>
        <item>Kitchen</item>
        <item>Boiler</item>
    </string-array>


    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="user_mob">Mobile</string>
    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_link_to_login">Sign in</string>
    <string name="forgot_password_text">We just need your registered Email to send you password reset instructions</string>
    <string name="reset_password">Reset Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_find_space">Find Space</string>
    <string name="nav_favourite_spaces">Favourite Spaces</string>
    <string name="nav_news_feed">News Feed</string>
    <string name="nav_groups">Groups</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="navigation_activity_titles">
        <item>Home</item>
        <item>Find Space</item>
        <item>News Feed</item>
        <item>Favourite Spaces</item>
        <item>Groups</item>
    </string-array>


    <!-- Navigation activity strings -->
    <!-- Home fragment strings -->
    <string name="search_hint">Search for a space ..</string>
    <string name="action_search">Search</string>
    <string name="find_space_button_text">Find Space</string>
    <string name="create_space_button_text">Create Space</string>

    <string-array name="governorates">
        <item>Any</item>
        <item>Alexandria</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Beheira</item>
        <item>Beni Suef</item>
        <item>Cairo</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Giza</item>
        <item>Ismailia</item>
        <item>Kafr El Sheikh</item>
        <item>Luxor</item>
        <item>Matruh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>
        <item>North Sinai</item>
        <item>Port Said</item>
        <item>Qalyubia</item>
        <item>Qena</item>
        <item>Red Sea</item>
        <item>Sharqia</item>
        <item>Sohag</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>
</resources>
