<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingBottom="0dp"
            android:text="@string/general_details"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/space_name_text"
                android:id="@+id/SpaceNameValue"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_space_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/space_description"
                android:id="@+id/SpaceDescValue"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_desc"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingBottom="0dp"
            android:text="@string/contact_details"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/space_mobile"
                android:id="@+id/SpaceMobileValue"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_mobile"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/space_email"
                android:id="@+id/SpaceEmailValue"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/space_website"
                android:id="@+id/SpaceWebsiteValue"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_website"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/space_fb"
                android:id="@+id/SpaceFbValue"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_social_media"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/space_tw"
                android:id="@+id/SpaceTwValue"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_social_media"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/space_insta"
                android:id="@+id/SpaceInstaValue"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_social_media"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/space_yt"
                android:id="@+id/SpaceYtValue"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_social_media"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="right"
            android:id="@+id/nextInGeneralInfo"
            android:layout_marginBottom="32dp"/>



    </LinearLayout>


</ScrollView>

