<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:text="@string/btn_forgot_password"
            android:textSize="32sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:text="@string/forgot_password_text"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_email"
                android:id="@+id/UserEmailForgot"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/reset_password"
            android:id="@+id/resetPassword"
            android:layout_margin="16dp"/>


        <ProgressBar
            android:id="@+id/progressBar_forgotPassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

    </LinearLayout>


</ScrollView>