<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:text="@string/sign_up"
            android:textSize="32sp"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/full_name"
                android:id="@+id/UserFullName"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_full_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_name"
                android:id="@+id/UserUserName"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_mob"
                android:id="@+id/UserMobile"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:inputType="number"
                android:maxLength="@integer/max_length_mobile"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_email"
                android:id="@+id/UserEmail"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:maxLength="@integer/max_length_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:id="@+id/UserPassword"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:maxLength="@integer/max_length_password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:id="@+id/signUp"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/btn_reset_password_in_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>