<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:text="@string/sign_in"
            android:textSize="32sp"
            android:gravity="center"/>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_email"
                android:id="@+id/UserEmailSignIn"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:paddingLeft="16dp"
            android:minHeight="72dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:id="@+id/UserPasswordSignIn"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingLeft="0dp"
                android:gravity="center_vertical"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:id="@+id/signIn"/>

        <Button
            android:id="@+id/btn_reset_password_in_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</ScrollView>